--- a/calendar.css
+++ b/calendar.css
@@ -2,9 +2,9 @@ body {
 	background: #e0e0e0;
 }
 #cal {
-	margin:50px auto;
+	margin:50px 0;
 	font: 13px/1.5 "Helvetica Neue", Helvetica, Arial, san-serif;
-	display:table;
+	/*display:table;*/
 	box-shadow:0px 3px 3px rgba(0, 0, 0, 0.25);
 	-moz-box-shadow:0px 3px 3px rgba(0, 0, 0, 0.25);
 	-webkit-box-shadow:0px 3px 3px rgba(0, 0, 0, 0.25);
@@ -71,23 +71,12 @@ body {
 }
 #cal td {
 	color:#2d2d2d;
-	width:30px;
+	width:1%;
 	height:30px;
 	line-height:30px;
-	text-align:center;
+	text-align:right;
 	border:1px solid #e6e6e6;
 	cursor:default;
-}
-
-#cal #day td {
-	height:26px;
-	line-height:26px;
-	text-transform:uppercase;
-	font-size:90%;
-	color:#9e9e9e;
-}
-#cal #days td:not(:last-child) {
-	border-right:1px solid #fff;
 }
 
 #cal #cal-frame td.today {
@@ -126,4 +115,8 @@ body {
 
 #cal #cal-frame table.curr {
 	float:right;
+}
+
+table.curr td {
+    padding: 1px 10px;
 }
